# 029.fastapi-booking-manager

./: .pre-commit-config.yaml  README.md  docker-compose.yaml  main.py  pyproject.toml  ruff.toml
booking-catalog/: .env.tempalte  app_lifespan.py  main.py
booking-catalog/alembic/: env.py
booking-catalog/alembic/versions/: 2026_06_22_1038-e0e951dddebd_create_bookings_table.py
booking-catalog/api/api_v1/: __init__.py  booking.py
booking-catalog/core/: config.py  taskiq_broker.py
booking-catalog/core/models/: __init__.py  booking.py  config.py  db_helper.py
booking-catalog/core/schemas/: __init__.py  booking.py
booking-catalog/core/types/: __init__.py  service_type.py
booking-catalog/storage/booking/: crud.py
booking-catalog/tasks/: __init__.py  update_service_type.py
booking-catalog/tests/: conftest.py
booking-catalog/tests/test_api/test_api_v1/: test_booking.py
booking-catalog/tests/test_tasks/: test_update_service_type.py
