[project]
name = "029-fastapi-booking-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.1.0",
    "ruff>=0.15.18",
]

# mypy settings
[tool.mypy]
strict = true
