[project]
name = "029-fastapi-booking-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.137.2",
    "pydantic-settings>=2.14.1",
    "sqlalchemy[asyncio]>=2.0.51",
    "taskiq>=0.12.4",
    "taskiq-aio-pika>=0.6.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.18",
]

# mypy settings
[tool.mypy]
strict = true
